fix: consertar bug carousel section sobre acima do backToTopButton mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -826,6 +826,7 @@ footer .social__links img:hover{
 }
 
 #backToTopButton.show{
+    z-index: 100;
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
